header - fix arrow jump in safari

--- a/src/sass/parts/_header.scss
+++ b/src/sass/parts/_header.scss
@@ -19,8 +19,7 @@
   }
 
   &--cta{
-    display: inline-flex;
-    align-items: center;
+    display: inline-block;
     text-transform: uppercase;
     font-size: 20px;
     font-weight: 700;
@@ -28,6 +27,7 @@
     gap: 11px;
     color: #C44F10;
     text-decoration: none;
+    margin-top: 6px;
 
     span:nth-child(1) {
       position: relative;
@@ -42,6 +42,11 @@
         height: 10px;
         width: 0;
       }
+    }
+
+    span{
+      vertical-align: middle;
+      display: inline-block;
     }
 
     span:nth-child(1):after,
@@ -61,6 +66,7 @@
       span:nth-child(1):after {
         width: 100%;
       }
+
       span:nth-child(2) {
         transform: translateX(20px);
         opacity: 0;
